--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,10 @@ spring.liquibase.password=zaqwas2022
 jwt.token.secret=jwtappdemo
 jwt.token.expired=3600000
 
-paths.login=/api/v1/auth/
+local.paths.save.taskSources=E:\\!1Study\\sem_7\\DispathcerFiles
+
+urls.login=/api/auth/login
+urls.auth=/api/auth
+urls.register=/api/register
+urls.admin=/api/admin/**
 
