Добавление задачи целиком, с сохранением в БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,10 @@ spring.liquibase.url=jdbc:postgresql://localhost:5432/REST_API_Dispatcher_Server
 spring.liquibase.user=Artem
 spring.liquibase.password=zaqwas2022
 
-jwt.token.secret=jwtappdemo
+jwt.token.secret=IVTFAVT
 jwt.token.expired=3600000
+jwt.token.bearer=Bearer_
+
 
 local.paths.save.taskSources=E:\\!1Study\\sem_7\\DispathcerFiles
 
