Перешли на линукс

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8075
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/REST_API_Dispatcher_Server?serverTimezone=UTC
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=Artem
+spring.datasource.username=artem
 spring.datasource.password=zaqwas2022
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/REST_API_Dispatcher_Server?serverTimezone=UTC
-spring.liquibase.user=Artem
+spring.liquibase.user=artem
 spring.liquibase.password=zaqwas2022
 
 jwt.token.secret=IVTFAVT
@@ -16,7 +16,7 @@ jwt.token.expired=3600000
 jwt.token.bearer=Bearer_
 
 
-local.paths.save.taskSources=E:\\!1Study\\sem_7\\DispathcerFiles
+local.paths.save.taskSources=/home/artem/projects/JWT_REST_API_Dispatcher_Server_App_2/Dispatcher_files
 
 urls.login=/api/auth/login
 urls.auth=/api/auth
