Подготовка папки под запуск + создание докерфайла. Команда докера не запускается...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ jwt.token.bearer=Bearer_
 
 
 local.paths.save.taskSources=/home/artem/Dispatcher_files
+local.paths.dockerTmpDir=/home/artem/Dispatcher_files/DockerTmp/
 
 urls.login=/api/auth/login
 urls.auth=/api/auth
