--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
             <version>1.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20211205</version>
+        </dependency>
+
+
     </dependencies>
 
 
